wallet/kustomize/wallet/overlays/local/wallet/web/ingress.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallet-web
  labels:
    app: web
    group: wallet
    component: wallet-web
spec:
  tls:
  - hosts:
      - $(WEB_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(WEB_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myagent
            port:
              name: http
